# new-beginning

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
assets/: client.txt  server.txt
src/: CMakeLists.txt  client.hpp  game.cpp  gameinstance.cpp  gameinstance.hpp  logger.hpp  server.hpp
src/assets/: assets.hpp
