cmake_minimum_required(VERSION 3.29)
project(NewBeginning)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
add_subdirectory(src)
set(CURSES_NEED_NCURSES TRUE)
set(CURSES_NEED_WIDE TRUE)
find_package(Curses REQUIRED)
target_include_directories(NewBeginning PUBLIC assets)
file(COPY assets DESTINATION ${CMAKE_SOURCE_DIR})