file(GLOB NB_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
list(REMOVE_ITEM NB_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/game.cpp)
file(GLOB NB_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
add_library(NewBeginning_src OBJECT ${NB_SOURCES} ${NB_HEADERS})
target_include_directories(NewBeginning_src INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(NewBeginning game.cpp)
target_link_libraries(NewBeginning PRIVATE NewBeginning_src)